# gears-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  deny.toml  dylint.toml  rust-toolchain.toml
.cf-studio/: version.toml  whatsnew.toml
.cf-studio/config/: artifacts.toml
.claude/skills/gts-analyze/: SKILL.md
.claude/skills/modkit-pr-review/: SKILL.md
.github/workflows/: cfs.yml  ci.yml  code-ranker.yml  web-docs-check.yml
apps/cf-gears-example-server/: Cargo.toml
config/: chat-engine-dev.yaml  e2e-features.txt  e2e-local.yaml  e2e-scope-enforcement.yaml  e2e-tr-authz.yaml  mini-chat.yaml  quickstart-windows.yaml  quickstart.yaml  static-tenants.yaml
docs/api/: api.json
docs/pr-review/: modkit-rust-review.md
gears/bss/ledger/ledger-sdk/: Cargo.toml
gears/bss/ledger/ledger-sdk/src/: api.rs  bill_run_finished.rs  close.rs  enums.rs  error.rs  error_tests.rs  issued_invoice_manifest.rs  lib.rs  posting.rs  provisioning.rs  psp_settlement_feed.rs  rate_provider.rs
gears/bss/libs/coord/: Cargo.toml  README.md
gears/bss/libs/coord/src/: lease.rs  lib.rs  migration.rs
gears/bss/libs/coord/src/lease/: entity.rs  error.rs  guard.rs  manager.rs  sqlite_tests.rs
gears/bss/libs/coord/src/migration/: m0001_create_coord_leases.rs
gears/bss/libs/coord/tests/: postgres_fence.rs
gears/credstore/: QUICKSTART.md
gears/credstore/credstore/: Cargo.toml  README.md
gears/credstore/credstore/src/: client.rs  client_tests.rs  config.rs  gear.rs  infra.rs  lib.rs
gears/credstore/credstore/src/api/rest/: dto.rs  dto_tests.rs  handlers.rs  routes.rs  routes_tests.rs
gears/credstore/credstore/src/domain/: authz.rs  error.rs  ports.rs  resolver.rs  secret.rs
gears/credstore/credstore/src/domain/ports/: metrics.rs
gears/credstore/credstore/src/domain/secret/: fence.rs  model.rs  repo.rs  service.rs  service_tests.rs  test_support.rs  type_resolver.rs  typing.rs  typing_tests.rs
gears/credstore/credstore/src/infra/: canonical_mapping.rs  error_conv.rs  metrics.rs  metrics_tests.rs  plugin_select.rs  sdk_error_mapping.rs  tenant_resolver.rs  tenant_resolver_tests.rs  types_registry.rs  types_registry_tests.rs
gears/credstore/credstore/src/infra/storage/: migrations.rs  repo_impl.rs
gears/credstore/credstore/src/infra/storage/entity/: secrets.rs  tenant_closure.rs
gears/credstore/credstore/src/infra/storage/migrations/: m0001_initial_schema.rs
gears/credstore/credstore/src/infra/storage/repo_impl/: helpers.rs  reads.rs  repo_tests.rs  writes.rs
gears/file-parser/: Cargo.toml
libs/modkit-odata/: Cargo.toml
libs/modkit/src/: lib.rs
libs/rustls-fips-shim/: Cargo.toml
libs/system-sdks/: Cargo.toml
libs/toolkit/: Cargo.toml
libs/toolkit-auth/: Cargo.toml
libs/toolkit-canonical-errors/: Cargo.toml
libs/toolkit-canonical-errors-macro/: Cargo.toml
libs/toolkit-db/: Cargo.toml
libs/toolkit-db-macros/: Cargo.toml
libs/toolkit-gts/: Cargo.toml
libs/toolkit-gts-macros/: Cargo.toml
libs/toolkit-http/: Cargo.toml
libs/toolkit-macros/: Cargo.toml
libs/toolkit-node-info/: Cargo.toml
libs/toolkit-odata/: Cargo.toml
libs/toolkit-odata-macros/: Cargo.toml
libs/toolkit-sdk/: Cargo.toml
libs/toolkit-security/: Cargo.toml
libs/toolkit-transport-grpc/: Cargo.toml
libs/toolkit-utils/: Cargo.toml
modules/credstore/credstore/: Cargo.toml  README.md
modules/credstore/credstore/src/: api.rs  client.rs  client_tests.rs  config.rs  domain.rs  infra.rs  lib.rs  module.rs
modules/credstore/credstore/src/api/: rest.rs
modules/credstore/credstore/src/api/rest/: dto.rs  dto_tests.rs  handlers.rs  routes.rs  routes_tests.rs
modules/credstore/credstore/src/domain/: authz.rs  error.rs  resolver.rs  secret.rs
modules/credstore/credstore/src/domain/ports/: metrics.rs  plugin.rs
modules/credstore/credstore/src/domain/secret/: model.rs  repo.rs  service.rs  service_tests.rs  test_support.rs
modules/credstore/credstore/src/infra/: canonical_mapping.rs  error_conv.rs  metrics.rs  metrics_tests.rs  plugin_select.rs  sdk_error_mapping.rs  storage.rs  tenant_resolver.rs  tenant_resolver_tests.rs
modules/credstore/credstore/src/infra/storage/: entity.rs  migrations.rs  repo_impl.rs
modules/credstore/credstore/src/infra/storage/entity/: secrets.rs  tenant_closure.rs
modules/credstore/credstore/src/infra/storage/migrations/: m0001_initial_schema.rs
modules/credstore/credstore/src/infra/storage/repo_impl/: helpers.rs  reads.rs  repo_tests.rs  writes.rs
studio-kit-gears/workflows/: pr-review.md  pr-status.md
testing/e2e/: README.md
tools/dylint_lints/: Cargo.toml  README.md
tools/dylint_lints/de09_gts_layer/de0904_no_hardcoded_gts_prefix/: Cargo.toml  README.md
tools/dylint_lints/de09_gts_layer/de0904_no_hardcoded_gts_prefix/src/: lib.rs
tools/dylint_lints/de09_gts_layer/de0904_no_hardcoded_gts_prefix/ui/: gts_id_marker.rs  hardcoded_prefix.rs  hardcoded_prefix.stderr  hardcoded_prefix_in_attributes.rs  hardcoded_prefix_in_attributes.stderr  hardcoded_prefix_in_macros.rs  hardcoded_prefix_in_macros.stderr  macro_markers.rs
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/: Cargo.toml
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/src/: lib.rs
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/: cargo_fixtures.rs
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/fixtures/all_features_true/: Cargo.toml
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/fixtures/excluded_crate/: Cargo.toml  dylint.toml
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/fixtures/missing_docs_rs/: Cargo.toml
tools/dylint_lints/de12_documentation/de1201_docs_rs_all_features/tests/fixtures/publish_false/: Cargo.toml
tools/gts-analyze/: Cargo.toml  README.md
tools/gts-analyze/src/: classify.rs  main.rs  model.rs  walk.rs
tools/gts-analyze/src/render/: json.rs  md.rs  mod.rs
tools/gts-analyze/src/scan/: json.rs  markdown.rs  mod.rs  rust.rs
tools/scripts/: docs-preview.sh  md-fabric.py  publish-all.py
(+935 files in other folders)
