[package]
name = "cyberware-credstore"
description = "credstore gateway module"
version = "0.1.22"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberware", "cyberware-system"]
categories = ["security"]
metadata.docs.rs.all-features = true

[lib]
name = "credstore"

[lints]
workspace = true

[dependencies]
credstore-sdk = { workspace = true }
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }
modkit-db = { workspace = true }
modkit-canonical-errors = { workspace = true }
authz-resolver-sdk = { workspace = true }
tenant-resolver-sdk = { workspace = true }
types-registry-sdk = { workspace = true }

async-trait = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
utoipa = { workspace = true }
opentelemetry = { workspace = true, features = ["metrics"] }

[dev-dependencies]
tower = { workspace = true }
modkit-db = { workspace = true, features = ["sqlite"] }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
test-support = ["dep:opentelemetry_sdk"]

[dependencies.opentelemetry_sdk]
workspace = true
features = ["metrics", "testing"]
optional = true
