[package]
name = "de1201_docs_rs_all_features"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Publishable crates must enable docs.rs all-features builds (DE1201)"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cargo_metadata = "0.23"
dylint_linting.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
